# arch3d_sample

./: .gitignore  README.md  pyproject.toml  requirements.txt
arch3d/conf/: bert_large.yaml  utils.py
arch3d/data/: constants.py  datamodule.py  dataset.py  toeplitz_normalize.py
arch3d/model/: arch3d.py
arch3d/optim/: lr_scheduler.py
arch3d/scripts/: pretrain.py
