[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digitalcell"
version = "0.0.0"

requires-python = ">=3.8"
authors = [
  {name = "Nicholas Galioto", email = "ngalioto@umich.edu"},
]

description = "A chromosome conformation foundation model"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["biology", "digital biology", "foundation model", "Hi-C", "computational biology"]
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[project.urls]
Homepage = "https://rajapakse.lab.medicine.umich.edu/"
Repository = "https://github.com/ngalioto/arch3d_sample.git"